--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -173,6 +173,9 @@ header h1 {
   text-transform: uppercase;
   text-shadow: 0 0 10px #071158;
 }
+header a:hover {
+  text-decoration: none;
+}
 nav {
   margin: 0 auto;
   display: block;
@@ -275,7 +278,7 @@ nav.mobile {
 }
 .entry {
   width: 275px;
-  height: 200px;
+  height: 130px;
   border-radius: 5px;
   /* below seems to fix a strange rendering bug in Chrome with 
 	background clipping on elements with a border radius */
@@ -294,45 +297,30 @@ nav.mobile {
 .entry img {
   min-height: 100%;
 }
-.entry section,
-.entry a {
+.entry span {
   transition: all 0.1s;
   color: white;
   cursor: pointer;
   width: 0;
   height: 0;
 }
-.entry section i,
-.entry a i {
+.entry span i {
   position: absolute;
 }
-.entry a {
+.entry span {
+  display: block;
   position: absolute;
-  bottom: -80px;
-  right: -80px;
-  border-top: 80px solid transparent;
-  border-bottom: 80px solid transparent;
-  border-right: 78px solid rgba(11, 19, 121, 0.75);
+  bottom: -100px;
+  right: -100px;
+  border-top: 100px solid transparent;
+  border-bottom: 100px solid transparent;
+  border-right: 98px solid rgba(11, 19, 121, 0.75);
   z-index: 2;
 }
-.entry a i {
+.entry span i {
   font-size: 26px;
-  top: -1.5em;
-  right: -2.75em;
-}
-.entry .info-button {
-  top: -80px;
-  left: -88px;
-  border-top: 80px solid transparent;
-  border-bottom: 80px solid transparent;
-  border-left: 88px solid rgba(11, 73, 121, 0.8);
-  position: absolute;
-  z-index: 2;
-}
-.entry .info-button i {
-  font-size: 30px;
-  bottom: -40px;
-  left: -84px;
+  top: -1.75em;
+  right: -3.25em;
 }
 .entry .info {
   width: 100%;
@@ -341,7 +329,7 @@ nav.mobile {
   top: 0;
   box-sizing: border-box;
   border-radius: 4px;
-  padding-top: 80px;
+  padding-top: 35px;
   padding-left: 12px;
   padding-right: 20px;
   z-index: 1;
@@ -375,7 +363,7 @@ nav.mobile {
 .entry:hover .info-button {
   left: 0;
 }
-.entry:hover a {
+.entry:hover span {
   right: 0px;
 }
 .line-1 {
@@ -471,6 +459,18 @@ nav.mobile {
 .portfolio .wrap {
   max-width: 908px;
 }
+.portfolio-entry .client,
+.portfolio-entry .project {
+  color: #3b2f58;
+  text-align: right;
+  text-transform: uppercase;
+  font-size: 1.5em;
+}
+.portfolio-entry .project {
+  font-family: "Raleway";
+  font-weight: 400;
+  font-size: 1em;
+}
 .lab {
   background-color: white;
 }
@@ -494,14 +494,6 @@ nav.mobile {
 }
 .color-2 {
   background-color: rgba(15, 88, 82, 0.8);
-}
-h1,
-h2,
-p {
-  opacity: 0;
-}
-a {
-  color: rgba(255, 255, 255, 0);
 }
 .wf-loading h1,
 .wf-loading h2,
