Added info icon to header and some adjustments to portfolio item page.

--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -8,9 +8,9 @@ nav.small
 	a(href='/contact')
 		i.icon-mail
 		p Contact
-	a(href='/lab')
-		i.icon-beaker
-		p Experiments
+	//- a(href='/lab')
+	//- 	i.icon-beaker
+	//- 	p Experiments
 	if entry
 		a(href='/portfolio')
 			i.icon-picture
