--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,8 @@ html(lang='en').wf-loading
 	body(class=slug)
 
 		header
+			a(href="/info")
+				i.icon-info-circled
 			h1 
 				a(href="/") Jeremy Freehill
 		block content
