--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,6 @@ block content
 				a(href='/contact')
 					| Contact
 					i.icon-mail
-				a(href='/lab')
-					| Experiments 
-					i.icon-beaker
+				//- a(href='/lab')
+				//- 	| Experiments 
+				//- 	i.icon-beaker
