Fix to portfolio item linking.

--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -14,7 +14,7 @@ block content
 				if appData
 					each entry in appData.entries
 						li(class="entry")
-							a(href='portfolio/#{entry.slug}', target='_new')
+							a(href='./portfolio/#{entry.slug}', target='_new')
 								img(src='/assets/img/thumbs/#{entry.thumb}')
 								span
 									i.icon-link-2
