Added LESS compiling middleware; some other style tweaks.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html(lang='en').wf-loading
 	body(class=slug)
 
 		header
-			a(href="/info")
+			a(href="/about")
 				i.icon-info-circled
 			h1 
 				a(href="/") Jeremy Freehill
