--- a/public/css/main.css
+++ b/public/css/main.css
@@ -46,10 +46,13 @@ nav.mobile{display:none}
 .entry{width:275px;height:130px;border-radius:5px;border:1px solid transparent;position:relative;transition:all 0.2s;display:inline-block;margin-right:20px;margin-bottom:20px;overflow:hidden;box-sizing:border-box;vertical-align:top;z-index:3}.entry img{min-height:100%}
 .entry span{transition:all 0.1s;color:white;cursor:pointer;width:0;height:0}.entry span i{position:absolute}
 .entry span{display:block;position:absolute;bottom:-100px;right:-100px;border-top:100px solid transparent;border-bottom:100px solid transparent;border-right:98px solid rgba(11,19,121,0.75);z-index:2}.entry span i{font-size:26px;top:-1.75em;right:-3.25em}
-.entry .info{width:100%;height:100%;position:absolute;top:0;box-sizing:border-box;border-radius:4px;padding-top:44px;padding-left:12px;padding-right:20px;z-index:1}.entry .info h1,.entry .info h2{font:1.125em 'Raleway',sans-serif;color:white;text-align:left;text-transform:uppercase}
+.entry .info{width:100%;height:100%;position:absolute;top:0;background-color:rgba(7,94,144,0.9);box-sizing:border-box;border-radius:4px;padding-top:44px;padding-left:12px;padding-right:20px;z-index:1}.entry .info h1,.entry .info h2{font:1.125em 'Raleway',sans-serif;color:white;text-align:left;text-transform:uppercase}
 .entry .info h1{font-weight:900;line-height:1.125em}
 .entry .info h2{font-size:1em;font-weight:500;margin-top:3px;margin-bottom:3px}
 .entry .info.active{top:-100%}
+.entry .info.color-0{background-color:rgba(7,94,144,0.9)}
+.entry .info.color-1{background-color:rgba(12,7,75,0.8)}
+.entry .info.color-2{background-color:rgba(15,88,82,0.8)}
 .entry:last-child{margin-right:0}
 .entry:nth-child(3n){margin-right:0}
 .entry:hover .info-button{left:0}
@@ -65,16 +68,16 @@ nav.mobile{display:none}
 .home nav a:hover i{right:15px;transition:right .1s}
 .home nav a:last-child{margin-bottom:0}
 .portfolio .wrap{max-width:908px}
-.portfolio-entry .client,.portfolio-entry .project{color:#3b2f58;text-align:right;text-transform:uppercase;font-size:1.5em}
-.portfolio-entry .project{font-family:"Raleway";font-weight:400;font-size:1em}
+.portfolio-entry .wrap{max-width:800px;padding-top:60px}
+.portfolio-entry .client,.portfolio-entry .project{color:#3b2f58;text-align:left;text-transform:uppercase;font-size:2em}
+.portfolio-entry .project{font-family:"Raleway";font-weight:400;font-size:1.5em}
+.portfolio-entry .right-column{float:right}
+.portfolio-entry .see-it{font:1.5em/1.25em 'Raleway',sans-serif;font-weight:900;text-transform:uppercase;color:white;background:#05667b url("../img/bg-diag-right.png") no-repeat;background-position:400px center}.portfolio-entry .see-it:hover{color:white;text-decoration:none;background-color:#3c057b;background-position:left center;transition:background-color .6s,background-position .3s}
 .lab,.about{background-color:white}.lab header,.about header{border-bottom-color:#c0237c}
 .lab h1,.about h1{font-weight:900}
 .lab h2,.about h2{color:#605474}.lab h2 i,.about h2 i{color:#c0237c}
-.color-0{background-color:rgba(7,94,144,0.9)}
-.color-1{background-color:rgba(12,7,75,0.8)}
-.color-2{background-color:rgba(15,88,82,0.8)}
 .wf-loading h1,.wf-loading h2,.wf-loading p{opacity:0}
 .wf-loading a{color:rgba(255,255,255,0)}
 .wf-active h1,.wf-active h2,.wf-active p{opacity:1;-webkit-transition:opacity 0.25s;-moz-transition:opacity 0.25s;transition:opacity 0.25s}
 .wf-active a{color:#fff;-webkit-transition:color 0.25s;-moz-transition:color 0.25s;transition:color 0.25s}
-@media (max-width:987px){body{font-size:14px} header{background-size:100% auto} h2 i{display:none} .entry{margin-right:20px;height:150px}.entry .info{padding-top:60px} .entry .info-button{display:none} .entry a{right:0} .entry:nth-child(3n){margin-right:20px} .entry:nth-child(2n){margin-right:0} .wrap{width:80%}}@media (max-width:737px){body{font-size:12px} .entry{width:45%;height:100px}.entry .info{padding-top:30px}}@media (max-width:640px){header{background-size:100% 100%;z-index:2} h1{font-size:3.5em} h2{font-size:2.5em;padding-top:.75em;margin-bottom:.75em} header{margin-bottom:0;height:120px} .wrap{width:100%;background-color:inherit;-webkit-transform:translateY(-200px);-moz-transform:translateY(-200px);-o-transform:translateY(-200px);transform:translateY(-200px);-webkit-transition:.6s -webkit-transform .05s;-moz-transition:.6s -moz-transform .05s;-o-transition:.6s -o-transform .05s;transition:.6s transform .05s}.wrap.open{-webkit-transform:translateY(0);-moz-transform:translateY(0);-o-transform:translateY(0);transform:translateY(0)} .entry{width:95%;height:72px;margin-right:0;margin-bottom:10px}.entry h2{padding-top:3px} .entry .info{padding-top:20px} .entry img{width:100%} .entry:nth-child(3n){margin-right:0} .content{padding:1.5em 0} .open-menu{display:inline-block} nav.small{display:block;position:relative;overflow:hidden;width:100%;height:200px;top:0;left:0}nav.small a{width:100%;height:50px;line-height:46px;border-radius:0;border-bottom:1px solid rgba(0,0,0,0.2);background-image:none}nav.small a p{opacity:1;display:inline-block;position:relative;bottom:0;border:none;box-shadow:none;background:none} nav.small a p:before{display:none} .home h2{font-size:26px} .home nav{width:95%}.home nav a{height:40px;margin-bottom:10px}}@media (max-width:480px){nav{width:100%} .home .content{width:100%}}
+@media (max-width:987px){body{font-size:14px} header{background-size:100% auto} h2 i{display:none} .entry{margin-right:20px;height:110px}.entry .info{padding-top:40px} .entry .info-button{display:none} .entry a{right:0} .entry:nth-child(3n){margin-right:20px} .entry:nth-child(2n){margin-right:0} .wrap{width:80%}}@media (max-width:737px){body{font-size:12px} .entry{width:45%;height:100px}.entry .info{padding-top:30px}}@media (max-width:640px){header{background-size:100% 100%;z-index:2} h1{font-size:3.5em} h2{font-size:2.5em;padding-top:.75em;margin-bottom:.75em} header{margin-bottom:0;height:120px} .wrap{width:100%;background-color:inherit;-webkit-transform:translateY(-200px);-moz-transform:translateY(-200px);-o-transform:translateY(-200px);transform:translateY(-200px);-webkit-transition:.6s -webkit-transform .05s;-moz-transition:.6s -moz-transform .05s;-o-transition:.6s -o-transform .05s;transition:.6s transform .05s}.wrap.open{-webkit-transform:translateY(0);-moz-transform:translateY(0);-o-transform:translateY(0);transform:translateY(0)} .entry{width:95%;height:72px;margin-right:0;margin-bottom:10px}.entry h2{padding-top:3px} .entry .info{padding-top:20px} .entry img{width:100%} .entry:nth-child(3n){margin-right:0} .content{padding:1.5em 0} .open-menu{display:inline-block} nav.small{display:block;position:relative;overflow:hidden;width:100%;height:200px;top:0;left:0}nav.small a{width:100%;height:50px;line-height:46px;border-radius:0;border-bottom:1px solid rgba(0,0,0,0.2);background-image:none}nav.small a p{opacity:1;display:inline-block;position:relative;bottom:0;border:none;box-shadow:none;background:none} nav.small a p:before{display:none} .home h2{font-size:26px} .home nav{width:95%}.home nav a{height:40px;margin-bottom:10px}}@media (max-width:480px){nav{width:100%} .home .content{width:100%}}
