--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -1,6 +1,6 @@
 script.
 	var appData = { currentPage: "#{slug}" }
-script(src='/assets/js/require.js', data-main='/assets/js/main')
+script(src='/js/require.js', data-main='/js/main')
 script.
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
