--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,9 +2,9 @@ doctype 5
 html(lang='en').wf-loading
 	head
 		meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
-		link(rel='icon', type='image/png', href='/assets/img/favicon.png')
-		link(rel='stylesheet', href='/assets/css/bootstrap.min.css')
-		link(rel='stylesheet', href='/assets/css/main.css')
+		link(rel='icon', type='image/png', href='/img/favicon.png')
+		link(rel='stylesheet', href='/css/bootstrap.min.css')
+		link(rel='stylesheet', href='/css/main.css')
 		script.
 			WebFontConfig = { google: {	families: ['Pacifico', 'Raleway:900, 500'] } };
 			(function(){var e=document.createElement("script");e.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js";e.type="text/javascript";e.async="true";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})();
