--- a/views/portfolio-entry.jade
+++ b/views/portfolio-entry.jade
@@ -8,23 +8,21 @@ block content
 		
 		section.content
 			section.full-entry
-				h1.client #{entry.client}
-				h2.project #{entry.project}
-				//- only display entries if data is passed
-				
-				
-				p #{entry.description}
-				
-				if entry.features
-					h3 Features:
-					ul
-					each feature in entry.features
-						li #{feature}
-				section.right-column
-					img(src='/img/thumbs/#{entry.thumb}')
+				div.left
+					h1.client #{entry.client}
+					h2.project #{entry.project}
+					//- only display entries if data is passed				
+					if entry.features
+						h3 Features:
+						ul
+						each feature in entry.features
+							li #{feature}
 					if entry.link
 						a(href='#{entry.link}', target='_new').see-it
 							| See It
 							i.icon-link-2
 			
+				div.right
+					img(src='/img/gallery/#{entry.slug}-01.jpg')
+					
 						
