Tweaks to views.

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,6 +14,10 @@ block content
 				a(href='/contact')
 					| Contact
 					i.icon-mail
+				a(href='/about')
+					| About
+					i.icon-info-circled
 				//- a(href='/lab')
 				//- 	| Experiments 
 				//- 	i.icon-beaker
+			div.content-cap
