--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -21,3 +21,7 @@ block content
 								section.info
 									h1.client #{entry.client}
 									h2.project #{entry.project}
+				p 
+					b Due to the nature of agency work, there are a dozen or more sites I've worked on that I cannot list here, either because they no longer exist, have been redesigned, or for legal reasons.
+		div.content-cap
+		p.legal &copy;2013 Jeremy Freehill.
