--- a/src/less/single-entry.less
+++ b/src/less/single-entry.less
@@ -2,11 +2,15 @@
 
 .single-entry {
 	.wrap {
-		max-width: 800px;
+		max-width: 780px;
 		padding-top: 70px;
 	}
 	.content {
 		overflow: auto;
+	}
+	.entry-nav {
+		left: auto;
+		right: 0;
 	}
 	.client,
 	.project,
@@ -39,12 +43,13 @@
 		font-size: 1.25em;
 		text-transform: uppercase; 
 		font-weight: 900;
-		margin-bottom: .5em; }
+		margin-bottom: .5em;
+		margin-top: 0; }
 	.features {
 		margin: .5em 0 2em 0;
 		padding-left: 0;
 		li {
-			font-size: 1em;
+			font-size: 1.125em;
 			list-style-position: inside;
 			list-style-type: square;
 			margin-bottom: .125em;
@@ -86,14 +91,33 @@
 			position: relative;
 		}
 		.content {
-			padding-left: 2em;
-			padding-right: 2em;
+			padding: 2.5em 0;
+			margin-top: 65px;
+		}
+		.entry-nav {
+			top: 214px;
+			right: 5%;
+			width: auto;
+		}
+		.project {
+			padding-top: .25em;
+			margin-bottom: 1em;
 		}
 		.right,
 		.left {
 			float: none;
 			width: 90%;
 			margin: 0 auto;
+		}
+		.right {
+			margin-bottom: 2em;
+		}
+		.see-it {
+			font-size: 1.75em;
+			width: 100%;
+			padding-top: .75em;
+			padding-bottom: .75em;
+			background-position: 500px center;
 		}
 	}
 }
