--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -2,10 +2,10 @@ nav.small
 	a(href='/').nav-home
 		i.icon-home
 		p Home
-	a(href='http://linkedin.com/in/jeremyfreehill', target='_new').nav-resume
+	a(href='/downloads/Jeremy-Freehill-Resume-Online.pdf', target='_blank').nav-resume
 		i.icon-doc-text
 		p Resume
-	a(href='/contact').nav-contact
+	a(href='http://linkedin.com/in/jeremyfreehill', target="_blank").nav-contact
 		i.icon-mail
 		p Contact
 	//- a(href='/lab')
