--- a/src/less/about.less
+++ b/src/less/about.less
@@ -10,7 +10,7 @@
 	
 	h2 {
 		color: #605474;
-		i {	color: #c0237c; } 
+		i {	color: #c0237c; font-size: .825em; } 
 	}
 	.nav-about { display: none; }
 	.wrap { max-width: 640px; }
@@ -20,7 +20,7 @@
 			color: #c0237c; }
 		p { color: #01213A;
 			font-size: 1.25em; 
-			line-height: 1.25em;
+			line-height: 1.3125em;
 			margin-top: 0;
 			a { font-size: 1em; } 
 		}
