--- a/views/about.jade
+++ b/views/about.jade
@@ -9,7 +9,7 @@ block content
 			i.icon-info-circled
 			| #{title}
 		section.content
-			p Hello! This site was built on top of <b>node.js</b> with <b>Express</b>, <b>LESS</b> and <b>Jade</b>. The Google <a href="https://developers.google.com/speed/pagespeed/module" target="_blank">PageSpeed module</a> for Apache serves the CSS and images in an optimized format, while on my server.
+			p Hello! This site was built on top of <b>node.js</b> with <b>Express</b>, <b>LESS</b> and <b>Jade</b>. The Google <a href="https://developers.google.com/speed/pagespeed/module" target="_blank">PageSpeed module</a> for Apache serves the CSS and images in an optimized format while on my server.
 			p See the open <a href="https://github.com/jfreehill/portfolio" target="_blank">git repository</a> for this site.
 			p You can find me in these other parts of the Great Interwebs:
 			ul
@@ -23,4 +23,5 @@ block content
 					a(href="http://facebook.com/jfreehill", target="_blank")
 						| Facebook
 		div.content-cap
+		p.legal &copy;2013 Jeremy Freehill
 			
