--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,11 @@ doctype 5
 html(lang='en').wf-loading
 	head
 		meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
+		meta(property="og:image", content="/img/img-facebook-icon.png")
+		meta(property="og:site_name", content="Jeremy Freehill")
+		meta(property="og:title", content="#{title}")
+		meta(property="og:description", content="Front-end oriented developer with a background in
+design and 2½ years in a large agency environment")
 		link(rel='icon', type='image/png', href='/img/favicon.png')
 		link(rel='stylesheet', href='/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/main.css')
