Various view fixes and tweaks.

--- a/src/less/about.less
+++ b/src/less/about.less
@@ -35,13 +35,15 @@
 	ul li {
 		color:#444;
 		list-style:none;
+		font-weight: bold;
+		margin-bottom: .25em;
 	}
 	// for custom bullets
 	ul li:before {
 	  color:#01213A;
 	  content:"\25A0";
 	  font-size:1.25em; 
-	  padding-right:.5em; 
+	  padding-right:.75em; 
 	  position:relative;
 	  top:0em; 
 	}	
