--- a/src/less/single-entry.less
+++ b/src/less/single-entry.less
@@ -12,6 +12,9 @@
 		left: auto;
 		right: 0;
 	}
+	.next {
+		margin-right: 0;
+	}
 	.client,
 	.project,
 	h3 {
@@ -27,8 +30,9 @@
 		margin-bottom: 1.125em;
 	}
 	.left {
-		width: 40%;
+		width: 38%;
 		float: left;
+		margin-right: 2%;
 	}
 	.right {
 		float: right;
@@ -64,7 +68,7 @@
 		background-position: 200px center;
 		border-radius: 3px;
 		padding: .25em 40px .25em 25px;
-		width: 60%;
+		width: 185px;
 		text-align: left; 
 		display: block;
 		position: relative;
@@ -86,6 +90,9 @@
 		}
 	}
 	@media (max-width: 640px) {
+		.open-menu {
+			margin-left: 5%;
+		}
 		.wrap {
 			padding-top: 0;
 			position: relative;
@@ -118,6 +125,9 @@
 			padding-top: .75em;
 			padding-bottom: .75em;
 			background-position: 500px center;
+		}
+		.legal {
+			margin-left: 5%;
 		}
 	}
 }
