--- a/views/index.jade
+++ b/views/index.jade
@@ -8,10 +8,10 @@ block content
 				a(href='/portfolio')
 					| Portfolio 
 					i.icon-picture
-				a(href='http://linkedin.com/in/jeremyfreehill', target='_new')
+				a(href='/downloads/Jeremy-Freehill-Resume-Online.pdf', target='_blank')
 					| Resume 
 					i.icon-doc-text
-				a(href='/contact')
+				a(href='http://linkedin.com/in/jeremyfreehill', target="_blank")
 					| Contact
 					i.icon-mail
 				a(href='/about')
