--- a/views/about.jade
+++ b/views/about.jade
@@ -9,19 +9,22 @@ block content
 			i.icon-info-circled
 			| #{title}
 		section.content
-			p Hello! This site was built on top of <b>node.js</b> with <b>Express</b>, <b>LESS</b> and <b>Jade</b>. The Google <a href="https://developers.google.com/speed/pagespeed/module" target="_blank">PageSpeed module</a> for Apache serves the CSS and images in an optimized format while on my server.
-			p See the open <a href="https://github.com/jfreehill/portfolio" target="_blank">git repository</a> for this site.
+			p Hello! This site was built on top of <b>node.js</b> with <b>Express</b>, <b>LESS</b> and <b>Jade</b>. The Google <a href="https://developers.google.com/speed/pagespeed/module" target="_blank">PageSpeed module</a> for Apache serves the CSS and images in an optimized format while on my server. There&rsquo;s also mobile styling, so try resizing the browser.
+			p See the public <a href="https://github.com/jfreehill/portfolio" target="_blank">git repository</a> for this site.
 			p You can find me in these other parts of the Great Interwebs:
 			ul
 				li
-					a(href="http://linkedin.com/in/jeremyfreehill", target="_blank")
-						| LinkedIn
-				li 
-					a(href="http://soundcloud.com/jfreehill", target="_blank") 
-						| SoundCloud
-				li
 					a(href="http://facebook.com/jfreehill", target="_blank")
 						| Facebook
+				li
+					a(href="http://linkedin.com/in/jeremyfreehill", target="_blank")
+						| LinkedIn
+				li
+					a(href="http://twitter.com/jeremyfreehill", target="_blank")
+						| Twitter
+				li
+					a(href="http://soundcloud.com/jfreehill", target="_blank")
+						| SoundCloud
 		div.content-cap
 		p.legal &copy;2013 Jeremy Freehill
 			
