--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,7 @@ html(lang='en').wf-loading
 		meta(property="og:image", content="/img/img-facebook-icon.png")
 		meta(property="og:site_name", content="Jeremy Freehill")
 		meta(property="og:title", content="#{title}")
-		meta(property="og:description", content="Front-end oriented developer with a background in
-design and 2½ years in a large agency environment")
+		meta(property="og:description", content="Front-end oriented developer with a background in design and 2½ years in a large agency environment")
 		link(rel='icon', type='image/png', href='/img/favicon.png')
 		link(rel='stylesheet', href='/css/bootstrap.min.css')
 		link(rel='stylesheet', href='/css/main.css')
