Added absolute paths on all links.

--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -1,8 +1,8 @@
 nav.small
-	a(href='/').nav-home
+	a(href='#{url}').nav-home
 		i.icon-home
 		p Home
-	a(href='/downloads/Jeremy-Freehill-Resume-Online.pdf', target='_blank').nav-resume
+	a(href='#{url}/downloads/Jeremy-Freehill-Resume-Online.pdf', target='_blank').nav-resume
 		i.icon-doc-text
 		p Resume
 	a(href='http://linkedin.com/in/jeremyfreehill', target="_blank").nav-contact
@@ -11,9 +11,9 @@ nav.small
 	//- a(href='/lab')
 	//- 	i.icon-beaker
 	//- 	p Experiments
-	a(href='/about').nav-about
+	a(href='#{url}/about').nav-about
 		i.icon-info-circled
 		p About
-	a(href='/portfolio').nav-portfolio
+	a(href='#{url}/portfolio').nav-portfolio
 		i.icon-picture
 		p portfolio
