--- a/views/index.jade
+++ b/views/index.jade
@@ -5,16 +5,16 @@ block content
 		h2= title
 		section.content
 			nav
-				a(href='/portfolio')
+				a(href='#{url}/portfolio')
 					| Portfolio 
 					i.icon-picture
-				a(href='/downloads/Jeremy-Freehill-Resume-Online.pdf', target='_blank')
+				a(href='#{url}/downloads/Jeremy-Freehill-Resume-Online.pdf', target='_blank')
 					| Resume 
 					i.icon-doc-text
 				a(href='http://linkedin.com/in/jeremyfreehill', target="_blank")
 					| Contact
 					i.icon-mail
-				a(href='/about')
+				a(href='#{url}/about')
 					| About
 					i.icon-info-circled
 				//- a(href='/lab')
