Added absolute path for Facebook icon.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype 5
 html(lang='en').wf-loading
 	head
 		meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
-		meta(property="og:image", content="/img/img-facebook-icon.png")
+		meta(property="og:image", content="#{url}/img/img-facebook-icon.png")
 		meta(property="og:title", content="#{title}")
 		meta(property="og:site_name", content="Jeremy Freehill")
 		meta(property="og:description", content="Front-end oriented developer with a background in design and 2½ years in a large agency environment")
