Fixing font rendering quirks in IE.

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -14,7 +14,11 @@ header {
 		right: 0;
 		text-transform: uppercase;
 		text-shadow: 0 0 10px #071158;
+		font-family: "Raleway", sans-serif;
 	}
+	a:link,
+	a:active,
+	a:visited,
 	a:hover {
 		text-decoration: none;
 		color: white;
@@ -40,4 +44,8 @@ header {
 	&:hover,
 	&:link,
 	&:visited { color: white; outline: none; }
+}
+
+.no-csstransitions {
+	header h1 { font-family: "Raleway Heavy", sans-serif; }
 }
