--- a/src/less/home.less
+++ b/src/less/home.less
@@ -13,7 +13,7 @@ nav {
 	}
 	a {
 		overflow: visible;
-		font: 1.875em/1.75em 'Raleway', sans-serif;
+		font: 1.875em/1.75em "Raleway", sans-serif;
 		font-weight: 900;
 		text-transform: uppercase;
 		color: white;
@@ -104,5 +104,10 @@ nav {
 				margin-bottom: 24px;
 			}
 		}
+	}
+}
+.no-csstransitions {
+	nav a {
+		font-family: "Raleway Heavy", sans-serif;
 	}
 }
