--- a/src/less/single-entry.less
+++ b/src/less/single-entry.less
@@ -43,6 +43,7 @@
 		}
 	}
 	h3 { 
+		font-family: "Raleway", sans-serif;
 		color: rgb(7, 94, 144);
 		font-size: 1.25em;
 		text-transform: uppercase; 
@@ -129,5 +130,12 @@
 		.legal {
 			margin-left: 5%;
 		}
+	}
+}
+
+.no-csstransitions {
+	.single-entry h1,
+	.single-entry h3 {
+		font-family: "Raleway Heavy", sans-serif;
 	}
 }
