--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,11 @@ html(lang='en').wf-loading
 	body(class=slug)
 
 		header
+			.line-5
+			.line-4
+			.line-3
+			.line-2
+			.line-1
 			h1 
 				a(href="/") Jeremy Freehill
 		block content
