--- a/src/less/portfolio.less
+++ b/src/less/portfolio.less
@@ -73,13 +73,14 @@
 		z-index: 1;
 
 		h1, h2 {
-			font: 1.125em 'Raleway', sans-serif;
+			font-family: "Raleway";
+			font-size: 1.125em;
 			color: white;
 			text-align: left;
 			text-transform: uppercase;
 		}
 		h1 { font-weight: 900; line-height: 1.125em; }
-		h2 { font-size: 1em; font-weight: 500; margin-top: 3px; margin-bottom: 3px;}
+		h2 { font-family: "Raleway", sans-serif; font-size: 1em; font-weight: 500; margin-top: 3px; margin-bottom: 3px;}
 
 		&.active {
 			top: -100%;
@@ -102,4 +103,7 @@
 			//-webkit-transform: translate(-80px);
 		}
 	}
+}
+.no-csstransitions {
+	.entry .info h1 { font-family: "Raleway Heavy", sans-serif; }
 }
