--- a/src/less/home.less
+++ b/src/less/home.less
@@ -76,7 +76,7 @@ nav {
 .home {
 	.content { 
 		width: 450px;
-		padding-top: 2.5em;
+		padding-top: 2.125em;
 	}
 	.content-cap {}
 	h2 { 
@@ -102,7 +102,7 @@ nav {
 				transition: right .1s;
 			}
 			&:nth-child(4) {
-				margin-bottom: 24px;
+				margin-bottom: 1em;
 			}
 		}
 	}
