Added EXTREME styles! (in progress)

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -117,6 +117,8 @@ h2 {
 	}
 }
 
+@import "metal.less";
+
 @media (max-width: 987px) {
 	body { font-size: 14px; }
 	header { background-size: 100% auto; }
