--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,7 +13,7 @@ html(lang='en').wf-loading
 		script(src='#{url}/js/modernizr.custom.min.js')
 		script.
 			// for async font loading
-			WebFontConfig = { google: { families: ['Pacifico', 'Raleway:900, 500'] } };
+			WebFontConfig = { google: { families: ['Pacifico', 'Raleway:900, 500', 'Metal Mania'] } };
 			(function(){var e=document.createElement("script");e.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js";e.type="text/javascript";e.async="true";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})();
 	body(class=slug)
 
