Updated templates to use JS set date, so it's always accurate

--- a/views/about.jade
+++ b/views/about.jade
@@ -26,5 +26,5 @@ block content
 					a(href="http://soundcloud.com/jfreehill", target="_blank")
 						| SoundCloud
 		div.content-cap
-		p.legal &copy;2013 Jeremy Freehill
+		p.legal &copy;#{year} Jeremy Freehill
 			
