--- a/views/index.jade
+++ b/views/index.jade
@@ -21,4 +21,4 @@ block content
 				//- 	| Experiments 
 				//- 	i.icon-beaker
 			div.content-cap
-			p.legal &copy;2013 Jeremy Freehill
+			p.legal &copy;#{year} Jeremy Freehill
