Added description meta and functional title tag

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,13 @@
 doctype html
 html(lang='en').wf-loading
 	head
-		meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0')
+		title Jeremy Freehill - #{title}
+		meta(name="viewport", content="width=device-width, initial-scale=1.0, maximum-scale=1.0")
+		meta(name="description", content="Front-end developer with 6 years of experience and a background in design")
+		meta(property="og:description", content="Front-end developer with 6 years of experience and a background in design")
 		meta(property="og:image", content="#{url}/img/img-fb-icon-200.png")
 		meta(property="og:title", content="#{title}")
 		meta(property="og:site_name", content="Jeremy Freehill")
-		meta(property="og:description", content="Front-end oriented developer with a background in design and 2½ years in a large agency environment")
 		meta(property="og:url", content="#{url}#{path}")
 		link(rel='icon', type='image/png', href='#{url}/img/favicon.png')
 		link(rel='stylesheet', href='#{url}/css/bootstrap.min.css')
