--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,6 +17,13 @@ html(lang='en').wf-loading
 			// for async font loading
 			WebFontConfig = { google: { families: ['Pacifico', 'Raleway:900, 500', 'Metal Mania'] } };
 			(function(){var e=document.createElement("script");e.src=("https:"==document.location.protocol?"https":"http")+"://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js";e.type="text/javascript";e.async="true";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})();
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-43034937-1', 'auto');
+			ga('send', 'pageview');
 	body(class=slug)
 
 		header
